--- a/index.html
+++ b/index.html
@@ -4,6 +4,45 @@
   <title>💖 Valentine 💖</title>
   <style>
     body {
+      background: #ffccd5;
+      text-align: center;
+      font-family: Arial, sans-serif;
+      padding-top: 100px;
+    }
+    h1 {
+      color: #c9184a;
+      font-size: 40px;
+    }
+    button {
+      font-size: 22px;
+      padding: 15px 25px;
+      margin: 10px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+    .yes {
+      background-color: #ff4d6d;
+      color: white;
+    }
+    .no {
+      background-color: #adb5bd;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <h1>Will you be my Valentine? 💕</h1>
+  <button class="yes" onclick="alert('YAY!!! 💖💖💖')">YES 💘</button>
+  <button class="no" onclick="alert('Okay... I’ll still bring chocolates 🍫')">NO 😢</button>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>💖 Valentine 💖</title>
+  <style>
+    body {
       background-color: #ffccd5;
       text-align: center;
       font-family: Arial, sans-serif;
