--- a/index.html
+++ b/index.html
@@ -60,16 +60,9 @@
       document.body.innerHTML = `
         <h1 style="color:#c9184a;">YAY LALLU!!! 💖</h1>
         <p style="font-size:24px;">
-          Kaise mujhe tum mil gayi… 🥹❤️<br><br>
-          You make my world brighter ✨<br>
-          Happy Valentine’s Day 💕
+          Happy Valentine my love ❤️<br>
+          You make my world brighter ✨
         </p>
-
-        <iframe width="0" height="0"
-          src="https://www.youtube.com/embed/DuF5rE6M7sA?autoplay=1"
-          frameborder="0"
-          allow="autoplay">
-        </iframe>
       `;
     }
 
@@ -94,4 +87,5 @@
 
 </body>
 </html>
+
 
